added more content

--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrew T Moore</title>
+    <title>ANDREW T MOORE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">Hello!</h1>
-        <div style="width:100%; background-color: red; min-height: 16px;"></div>
+        <div class="redbar" style="position: sticky; top: 0;">ANDREW T MOORE</div>
+        <div class="row">
+            <div class="col links display-3">
+                <p><a href="https://www.linkedin.com/in/andrew-moore-385497230/">LINKEDIN</a></p>
+                <p><a href="https://github.com/amoore33">GITHUB</a></p>
+            </div>
+            <div class="col greetings">
+                <h1 class="display-1"><em>!! GREETINGS !!</em></h1>
+                <dl>
+                    <dt>// NAME</dt>
+                    <dd>ANDREW T MOORE</dd>
+                    
+                    <dt>// PRNS</dt>
+                    <dd>HE/HIM</dd>
+
+                    <dt>// EDU</dt>
+                    <dd>PURDUE UNIV. INDIANAPOLIS<br>
+                    COMPUTER &amp; INFO. TECH.<br>
+                    BS &rsquo;24, MS &rsquo;24</dd>
+
+                    <dt>// LOC</dt>
+                    <dd>INDIANAPOLIS, IN, USA</dd>
+                </dl>
+            </div>
+        </div>
+        <div class="redbar">!! RANDOM DEMO(S) !!</div>
+        <div class="stretch-container text-center">
+            ALL <span class="stretch-4">T</span><span class="stretch-5">H</span>AT<br>
+            O<span class="stretch-1">N</span><span class="stretch-0">E</span> M<span class="stretch">A</span>N<br>
+            <span class="stretch">CA</span><span class="stretch-2">N</span> D<span class="stretch-3">O</span>
+        </div>
     </div>
 </body>
 </html>
