added info and links

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
                     <dt>// LOC</dt>
                     <dd>INDIANAPOLIS, IN, USA</dd>
+
+                    <dt>// SKILLS</dt>
+                    <dd>HTML. CSS. JAVASCRIPT. NODE. MONGODB. REACT. PYTHON. GOOGLE&nbsp;CLOUD. WORDPRESS.</dd>
                 </dl>
             </div>
         </div>
@@ -39,6 +42,10 @@
             ALL <span class="stretch-4">T</span><span class="stretch-5">H</span>AT<br>
             O<span class="stretch-1">N</span><span class="stretch-0">E</span> M<span class="stretch">A</span>N<br>
             <span class="stretch">CA</span><span class="stretch-2">N</span> D<span class="stretch-3">O</span>
+        </div>
+        <div class="links display-5">
+            <a href="https://amoore33.github.io/musicpages/">Music Pages Demo</a>
+            <a href="https://amoore33.github.io/cit215_instrumentstore/">Instrument Store Demo</a>
         </div>
     </div>
 </body>
