--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANDREW T MOORE</title>
+    <title>ANDREW T. MOORE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="redbar" style="position: sticky; top: 0;">ANDREW T MOORE</div>
+        <div class="redbar" style="top: 0;">ANDREW T. MOORE</div>
         <div class="row">
             <div class="col links display-3">
                 <p><a href="https://www.linkedin.com/in/andrew-moore-385497230/">LINKEDIN</a></p>
@@ -19,7 +19,7 @@
                 <h1 class="display-1"><em>!! GREETINGS !!</em></h1>
                 <dl>
                     <dt>// NAME</dt>
-                    <dd>ANDREW T MOORE</dd>
+                    <dd>ANDREW T. MOORE</dd>
                     
                     <dt>// PRNS</dt>
                     <dd>HE/HIM</dd>
@@ -37,7 +37,7 @@
                 </dl>
             </div>
         </div>
-        <div class="redbar">!! RANDOM DEMO(S) !!</div>
+        <div class="redbar" style="top: 2em;">!! RANDOM DEMO(S) !!</div>
         <div class="stretch-container text-center">
             ALL <span class="stretch-4">T</span><span class="stretch-5">H</span>AT<br>
             O<span class="stretch-1">N</span><span class="stretch-0">E</span> M<span class="stretch">A</span>N<br>
@@ -47,6 +47,7 @@
             <a href="https://amoore33.github.io/musicpages/">Music Pages Demo</a>
             <a href="https://amoore33.github.io/cit215_instrumentstore/">Instrument Store Demo</a>
         </div>
+        <footer>&copy;2025 ANDREW T. MOORE</footer>
     </div>
 </body>
 </html>
